# home

./: .gitmodules
asms_ros/: CMakeLists.txt  package.xml
asms_ros/launch/: asms.launch
asms_ros/msg/: BoundingBox.msg
asms_ros/src/: CMakeLists.txt  asms.cc  asms.h  asms_node.cc  colotracker.cc  colotracker.h  main_demo.cc  region.cc  region.h
csc_nav2d_msgs/: CMakeLists.txt  package.xml
csc_nav2d_msgs/msg/: localPlanPoints.msg
csc_nav2d_navigator/: CMakeLists.txt  package.xml  说明
csc_nav2d_navigator/include/csc_nav2d_navigator/: GridMap.h  MapInflationTool.h  RobotNavigator.h  commands.h
csc_nav2d_navigator/scripts/: talker.py
csc_nav2d_navigator/src/: MapInflationTool.cpp  RobotNavigator.cpp  navigator.cpp  set_goal_client.cpp
csc_nav2d_operator/: CMakeLists.txt  package.xml
csc_nav2d_operator/include/csc_nav2d_operator/: RobotOperator.h
csc_nav2d_operator/src/: RobotOperator.cpp  node.cpp
facenet-ros/src/: facenet_home.py
facenet_ros/: CMakeLists.txt  package.xml
facenet_ros/launch/: facenet_home.launch  test.launch
facenet_ros/src/: facenet_home_node.py
home/: CMakeLists.txt  package.xml
home/cfg/: ros.yaml  yolo-face-computer.cfg  yolo-face-computer.yaml  yolov3-tiny-home.cfg  yolov3-tiny-home.yaml
home/launch/: D435.launch  capture.launch  facenet.launch  follower.launch  gmapping.launch  home.launch  home_sm.launch  mapping.launch  navigation.launch  obj_detect.launch  rplidar.launch  xf.launch  yolo.launch  yolov2_tiny.launch  yolov3-tiny-home.launch
home/param/: costmap_common_params.yaml  local_costmap_params.yaml  navigator.yaml  operator.yaml  ros.yaml
home/scripts/: home_tmux.sh  obj_tracking_tmux.sh
home/src/: asr.py  capture.py  config.py  config_dict.py  follower.py  generate_bnf.py  generate_bnf_confirm.py  generate_wav.py  home_sm.py  job.py  pos.py  quick_run.py
home/src/robot/: __init__.py  body.py  core.py  utils.py
home/src/robot/base/: __init__.py
home/src/robot/cerebrum/: __init__.py  core.py
home/src/robot/communication/: __init__.py  core.py
home/src/robot/perception/: __init__.py  core.py  facenet_home.py
home/src/robot/tests/: test_robot.py
home/src/sm/: __init__.py  find_people.py  guest_recognition.py  looking_goods.py  meet_guest.py  utils.py  wait_door_open.py
home/src/sm/tests/: test_sm.py
home_bringup/: CMakeLists.txt  package.xml
home_bringup/launch/: minimal.launch
home_bringup/launch/includes/: description.launch.xml  mobile_base.launch.xml  robot.launch.xml
home_bringup/launch/includes/kobuki/: mobile_base.launch.xml
home_bringup/param/: diagnostics.yaml
home_bringup/urdf/: d435.urdf.xacro  hexagons.urdf.xacro  home.urdf.xacro  turtlebot_common_library.urdf.xacro  turtlebot_properties.urdf.xacro
turtlebot_navigation/launch/: navigation.launch  navigation_nomap.launch  rplidar.launch
turtlebot_navigation/launch/includes/: move_base_nomap.launch.xml
turtlebot_navigation/param/: costmap_common_params.yaml  dwa_local_planner_params.yaml  move_base_params.yaml
turtlebot_navigation/param/nomap/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml
xf_ros/: CMakeLists.txt  package.xml
xf_ros/action/: HomeRecognize.action
xf_ros/cfg/: asr.yaml  home.bnf  home_final.bnf  home_generated.bnf  home_test.bnf
xf_ros/include/xf/: speech_recognizer.h
xf_ros/include/xf_ros/: asr.hpp
xf_ros/launch/: asr.launch  asr_node.launch  tts.launch  tts_node.launch
xf_ros/res/tts/: xiaofeng.jet  xiaoyan.jet
xf_ros/src/: asr.cpp  asr_node.cpp  tts_node.cpp
xf_ros/src/xf/: speech_recognizer.c
