<?xml version="1.0"?>
<package format="2">
  <name>asms_ros</name>
  <version>0.0.0</version>
  <description>The asms_ros package</description>
  <maintainer email="cccmorin@gmail.com">lennon</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <build_export_depend>opencv</build_export_depend>
  <exec_depend>opencv</exec_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <exec_depend>cv_bridge</exec_depend>
</package>
